--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -299,7 +299,7 @@ a:hover {
 #hero-area:before {
   content: '';
   z-index: 9;
-  background: rgba(255, 255, 255, 0.78);
+  background: rgba(0, 0, 0, 0.78);
   position: absolute;
   top: 0;
   left: 0;
@@ -315,7 +315,7 @@ a:hover {
 #hero-area h1 {
   font-size: 40px;
   line-height: 50px;
-  color: #333;
+  color: #fff ;
   font-weight: 700;
   margin-bottom: 15px;
   text-transform: uppercase;
@@ -327,7 +327,7 @@ a:hover {
   margin-bottom: 38px;
   line-height: 27px;
   text-transform: uppercase;
-  color: #666;
+  color: #fff;
   font-family: 'Roboto', sans-serif;
   margin-top: 25px;
 }
@@ -803,9 +803,9 @@ article {
   padding: 30px 0 60px;
 }
 
-#contact-section {
+/* #contact-section {
   padding: 90px 0;
-}
+} */
 
 #contact-section .contact-form {
   margin-top: 42px;
