--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -5,11 +5,10 @@
             <div class="col-md-8 col-12 text-center text-lg-left text-md-left">
                 <p class="copyright">Copyright:
                     <span>
-                        <script>document.write(new Date().getFullYear())</script>
-                    </span> Design and Developed by
-                    <a href="http://www.Themefisher.com" target="_blank">Themefisher</a>.
-                    <br> Get More Bootstrap Template From Our
-                    <a href="https://themefisher.com/free-bootstrap-templates/" target="_blank">Store</a>
+                        &copy; <script>document.write(new Date().getFullYear())</script>
+                    </span> <b>&middot;</b>
+                    <a href="http://github.com/Code-Learn-Work" target="_blank">Code Learn Work</a>
+                    <b>&middot;</b> All Rights Reserved
                 </p>
             </div>
             <div class="col-md-4 col-12">
