Teams Info Updated

--- a/layouts/partials/team.html
+++ b/layouts/partials/team.html
@@ -44,6 +44,11 @@
                             <i class="ion-social-reddit"></i>
                         </a>
                         {{ end }}
+                        {{ with .youtube }}
+                        <a href="{{ . }}" target="_blank">
+                            <i class="ion-social-youtube"></i>
+                        </a>
+                        {{ end }}
                     </p>
                 </div>
             </div>
