--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -11,7 +11,7 @@
                     
                     <div class="blog-post-image">
                         <a href="{{ .Permalink }}">
-                             {{ with .Params.image }}<img class="img-fluid" width="600" src="{{ . | absURL }}" alt="post-image"/>{{ end }}
+                             {{ with .Params.image }}<img class="img-fluid img-thumbnail" style="border-radius: 20px" width="600" src="{{ . | absURL }}" alt="post-image"/>{{ end }}
                         </a>
                     </div>
                     <div class="blog-content">
