--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -23,8 +23,8 @@
         <div class="row">
             <div class="col-md-12">
                 {{ with .Params.image }}
-                <div class="post-img">
-                    <img class="img-fluid" alt="" src="{{ . | absURL }}">
+                <div class="post-img" style="text-align:center">
+                    <img class="img-fluid" style="border-radius: 20px" width="600" alt="" src="{{ . | absURL }}">
                 </div>
                 {{ end }}
                 <div class="post-content">
